# gmpl-tex

./: LICENSE  README.md  pyproject.toml
gmpl-tex/: pyproject.toml
gmpl-tex/examples/: model.mod
gmpl-tex/src/gmpltex/: grammar.lark  main.py
gmpl-tex/src/gmpltex/Modules/: LatexAssembler.py
gmpl-tex/src/gmpltex/Transformers/: LatexTransformer.py  LookupTableBuilder.py
src/gmpltex/: main.py
src/gmpltex/DataModels/: RenderModels.py
