[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmpl-tex"
version = "1.0.0dev"
description = "Convert GMPL (GNU MathProg) models into LaTeX."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["lark>=1.1"]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
authors = [
  { name = "Philipp Molnar" }
]

[project.scripts]
gmpl-tex = "gmpltex.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gmpltex"]

# Guarantee the grammar travels inside the wheel even if
# the default file discovery ever changes.
[tool.hatch.build.targets.wheel.force-include]
"src/gmpltex/grammar.lark" = "gmpltex/grammar.lark"