[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmpl-tex"
version = "0.1.0"
description = "Convert GMPL (GNU MathProg) models into LaTeX."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["lark>=1.1"]

[project.scripts]
gmpl-tex = "gmpltex.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gmpltex"]

# Guarantee the grammar travels inside the wheel even if
# the default file discovery ever changes.
[tool.hatch.build.targets.wheel.force-include]
"src/gmpltex/grammar.lark" = "gmpltex/grammar.lark"